# chrome-browser-mcp

./: .gitignore  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  exten-coder-agent-prompt.md  exten-coder-agent-prompt.zh.md  exten-coder-invoke-guide.md  exten-coder-invoke-guide.zh.md  skill.md  skill.zh.md
.github/workflows/: publish.yml
ExtensDevFolder/autorunway-chrome-extension/: ARCHITECTURE.md  ConcurrencyManager.js  ConfigManager.js  ImageManager.js  Logger.js  PERSISTENCE.md  background.js  contents.js  contents_bak.js  manifest.json  popup.html  popup.js  styles.css  test-plugin.js  这个插件的流程.md
ExtensDevFolder/tauri-app/: AuthKey_3QAL762SHB.p8  convert-icon.js  index.html  nextstep.md  package-lock.json  package.json
ExtensDevFolder/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
ExtensDevFolder/tauri-app/src-tauri/capabilities/: default.json
ExtensDevFolder/tauri-app/src-tauri/icons/: create_icon.cs  create_icon.ps1  create_real_icon.ps1  create_real_icon_fixed.ps1
ExtensDevFolder/tauri-app/src-tauri/src/: main.rs
chrome-browser-mcp/: .npmignore  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-TW.md  README.zh.md  chrome-browser-mcp-1.0.0.tgz  package-lock.json  package.json
chrome-browser-mcp/src/: index.ts  js-tester.ts
extDevsystem/: cdp-guide.md  exten-coder-agent-prompt.md  exten-coder-invoke-guide.md  product-spec.md  runway-page-structure.html  skill.md  start.txt
(+5 files in other folders)
